--- a/src/pages/categoria.html
+++ b/src/pages/categoria.html
@@ -16,6 +16,7 @@
             <div class="categoria" data-categoria="2">AM</div>
             <div class="categoria" data-categoria="3">PM</div>
             <div class="categoria" data-categoria="4">LE</div>
+            <div class="categoria" data-categoria="5">INTEGRATION</div>
         </div>
     
         <div id="itensContainer">
@@ -25,7 +26,9 @@
             <button class="btn-primary" onclick="verificarCategorias()">Check my solution</button>
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
+        <!--
         <audio src="/public/assets/audios/bgmusic-arcade.mp3" autoplay loop controls></audio>
+        -->
     </main>
     <footer>
         <div class="made-for">
