--- a/src/pages/maker-machine.html
+++ b/src/pages/maker-machine.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/ceos.css">
-    <script src="../js/packer-machine-ceos.js" type="module" defer></script>
+    <script src="../js/maker-machine-ceos.js" type="module" defer></script>
     <title>Quiz - Apex - Aimirim</title>
 </head>
 
@@ -49,7 +49,7 @@
                         <span>---</span>
                     </div>
                 </div>
-                <img src="/public/assets/images/new-xw.png" alt="Maquina encarteiradora GD - XW" />
+                <img src="/public/assets/images/gd121-maker.png" alt="Maquina encarteiradora GD - XW" />
             </div>
         </div>
     </section>
@@ -62,7 +62,7 @@
         <h4>Você chegou ao final</h4>
         <a href="/src/pages/ceos.html" class="btn-primary btn-restart" >Recomeçar<a/>
     </div>
-    <audio id="machine-run" src="/public/assets/audios/machine-run.mp3" loop></audio>
+    <audio id="machine-run" src="/public/assets/audios/maker-run.mp3" loop></audio>
     <audio id="machine-stop" src="/public/assets/audios/machine-stop.mp3" loop></audio>
     <div class="illustration d-none">
         <div class="chat-container">
