--- a/src/pages/categoria.html
+++ b/src/pages/categoria.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>    
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
     <link rel="stylesheet" href="../css/categoria.css" />
     <script src="../js/categorias.js" defer></script>
     <title>Mini-jogo: Arrastar e Soltar - Categorias</title>
 </head>
+
 <body>
     <main>
         <h1>Focus on what's most important and arrange the cards in the correct order</h1>
@@ -18,7 +20,7 @@
             <div class="categoria" data-categoria="4">LE</div>
             <div class="categoria" data-categoria="5">INTEGRATION</div>
         </div>
-    
+
         <div id="itensContainer">
             <!-- Itens serão inseridos aqui pelo JS -->
         </div>
@@ -26,17 +28,19 @@
             <button class="btn-primary" onclick="verificarCategorias()">Check my solution</button>
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
-        <!--
-        <audio src="/public/assets/audios/bgmusic-arcade.mp3" autoplay loop controls></audio>
-        -->
+
+        <audio src="/assets/audios/bgmusic-arcade.mp3" autoplay loop controls></audio>
+
     </main>
     <footer>
         <div class="made-for">
-            Developed <span class="easteregg"><p>by</p>
+            Developed <span class="easteregg">
+                <p>by</p>
                 <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-            </span><img src="/public/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
-            
+            </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+
         </div>
     </footer>
 </body>
+
 </html>
