--- a/src/pages/flip-card.html
+++ b/src/pages/flip-card.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/flip-game.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>    
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
     <link rel="stylesheet" href="../css/flip-game.css" />
     <title>Mini-jogo: Memória</title>
 </head>
+
 <body>
     <main>
         <h1>Help find what we need to be IWS phase 3</h1>
@@ -17,16 +18,17 @@
             <button class="btn-primary" onclick="verificarSolucao()">Check my solution</button>
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
-        <!--
-        <audio src="/public/assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
-        -->
+
+        <audio src="/assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
+
     </main>
     <footer>
         <div class="made-for">
-            Developed <span class="easteregg"><p>by</p>
+            Developed <span class="easteregg">
+                <p>by</p>
                 <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-            </span><img src="/public/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
-            
+            </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+
         </div>
     </footer>
 </body>
