--- a/src/pages/kaban1.html
+++ b/src/pages/kaban1.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/kaban1.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>    
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
     <link rel="stylesheet" href="../css/kaban1.css" />
     <title>Mini-jogo: Kanban</title>
 </head>
+
 <body>
     <main>
         <h1>Organize the metrics BAT - Brasil</h1>
@@ -21,17 +23,19 @@
             <button class="btn-primary" onclick="verificarKanban()">Check my solution</button>
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
-        <!--
-        <audio src="/public/assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
-        -->
+
+        <audio src="/assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
+
     </main>
     <footer>
         <div class="made-for">
-            Developed <span class="easteregg"><p>by</p>
+            Developed <span class="easteregg">
+                <p>by</p>
                 <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-            </span><img src="/public/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
-            
+            </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+
         </div>
     </footer>
 </body>
+
 </html>
