--- a/src/pages/quebra-cabeca.html
+++ b/src/pages/quebra-cabeca.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>    
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js" defer></script>
     <link rel="stylesheet" href="../css/quebra-cabeca.css" />
     <script src="../js/quebra-cabeca.js" defer></script>
     <title>Mini-jogo: Quebra-Cabeça de Imagem</title>
 </head>
+
 <body>
     <main>
         <h1>Solve the puzzle and stay ahead of the game</h1>
@@ -20,15 +22,15 @@
             <div class="puzzle-container" id="puzzleSlots">
                 <!-- Espaços corretos onde as peças devem ser colocadas -->
             </div>
-            
+
         </div>
         <div class="cta">
             <button class="btn-primary" onclick="verificarPuzzle()">Check my solution</button>
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
-        <!--
-        <audio src="/public/assets/audios/bg-music-modern2.mp3" autoplay loop controls></audio>
-        -->
+
+        <audio src="/assets/audios/bg-music-modern2.mp3" autoplay loop controls></audio>
+
     </main>
     <div class="card d-none">
         <h2>Congratulations</h2>
@@ -36,14 +38,16 @@
         <picture>
             <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f973/512.webp" type="image/webp">
             <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f973/512.gif" alt="🥳">
-          </picture>
-          <a class="btn-primary" href="../pages/rpg-factory.html">Play Again</a>
+        </picture>
+        <a class="btn-primary" href="../pages/rpg-factory.html">Play Again</a>
     </div>
     <div class="made-for">
-        Developed <span class="easteregg"><p>by</p>
+        Developed <span class="easteregg">
+            <p>by</p>
             <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-        </span><img src="/public/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
-        
+        </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+
     </div>
 </body>
+
 </html>
