fix: remove ./assets on index.html

--- a/index.html
+++ b/index.html
@@ -280,23 +280,23 @@
 
             <div class="stand modal-game" data-jogo="modal-game" data-link="#" data-concluido="false"
                 style="position: absolute; left: 400px; top: 390px">
-                <img src="./assets/images/makr.svg" alt="marcacao" class="mark-atual" />
+                <img src="/assets/images/makr.svg" alt="marcacao" class="mark-atual" />
                 <span class="step">1</span>
             </div>
 
             <div class="stand bat-atual" data-jogo="kaban" data-link="/src/pages/rpg-factory.html"
                 style="position: absolute; left: 550px; bottom: 150px">
-                <img src="./assets/images/makr.svg" alt="marcacao" class="mark-atual" />
+                <img src="/assets/images/makr.svg" alt="marcacao" class="mark-atual" />
                 <span class="step">2</span>
             </div>
 
             <a class="stand ceos" href="/src/pages/ceos.html" data-jogo="ceos" data-link="/src/pages/ceos.html"
                 style="position: absolute; left: 620px; bottom: 250px">
-                <img src="./assets/images/logo-ceos-icon-yellow.svg" alt="logo ceos" class="mark-atual"
+                <img src="/assets/images/logo-ceos-icon-yellow.svg" alt="logo ceos" class="mark-atual"
                     style="width: 20px;" />
             </a>
 
-            <img src="./assets/images/player-right-front.svg" alt="player" id="boneco" class="boneco"
+            <img src="/assets/images/player-right-front.svg" alt="player" id="boneco" class="boneco"
                 style="top: 300px; left: 200px;" />
             </a>
             <audio style="position: absolute; left: 80px; top: 8px;" src="/assets/audios/bg-music-epic1.mp3" autoplay
