--- a/src/pages/quebra-cabeca.html
+++ b/src/pages/quebra-cabeca.html
@@ -29,7 +29,7 @@
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
 
-        <audio src="/assets/audios/bg-music-modern2.mp3" autoplay loop controls></audio>
+        <audio src="assets/audios/bg-music-modern2.mp3" autoplay loop controls></audio>
 
     </main>
     <div class="card d-none">
@@ -45,7 +45,7 @@
         Developed <span class="easteregg">
             <p>by</p>
             <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-        </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+        </span><img src="assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
 
     </div>
 </body>
