fix: remove assets to /assets

--- a/src/pages/rpg-factory.html
+++ b/src/pages/rpg-factory.html
@@ -22,32 +22,32 @@
       <p>Exit Factory</p>
     </a>
     <div id="mapa">
-      <img src="assets/images/player-right-front.svg" alt="player" id="boneco" class="boneco" />
+      <img src="/assets/images/player-right-front.svg" alt="player" id="boneco" class="boneco" />
 
       <div class="stand bat-atual" style="top: 10px; left: 400px" data-jogo="Meet our CBN"
         data-link="/src/pages/kaban1.html">
-        <img src="assets/images/game1.svg" alt="machine" />
-        <img src="assets/images/makr.svg" alt="machine" class="mark-atual" />
+        <img src="/assets/images/game1.svg" alt="machine" />
+        <img src="/assets/images/makr.svg" alt="machine" class="mark-atual" />
         <span class="step" style="left: -2rem;">1</span>
       </div>
 
       <div class="stand future" style="top: 150px; left: 200px;" data-jogo="Where to be focused"
         data-link="/src/pages/categoria.html">
-        <img src="assets/images/game2.svg" alt="digital board" />
-        <img src="assets/images/makr.svg" alt="machine" class="mark-future" />
+        <img src="/assets/images/game2.svg" alt="digital board" />
+        <img src="/assets/images/makr.svg" alt="machine" class="mark-future" />
         <span class="step">2</span>
       </div>
 
       <div class="stand phase3" style="top: 380px; left: 30px;" data-jogo="New Concepts for Ph3"
         data-link="/src/pages/flip-card.html">
-        <img src="assets/images/machine.svg" alt="machines" />
-        <img src="assets/images/makr.svg" alt="machine" class="mark-phase3" />
+        <img src="/assets/images/machine.svg" alt="machines" />
+        <img src="/assets/images/makr.svg" alt="machine" class="mark-phase3" />
         <span class="step">3</span>
       </div>
       <div class="stand beahead" style="top: 380px; left: 440px;" data-jogo="Udi Factory Role"
         data-link="/src/pages/quebra-cabeca.html">
-        <img src="assets/images/game4.svg" alt="people board" />
-        <img src="assets/images/makr.svg" alt="machine" class="mark-beahead" />
+        <img src="/assets/images/game4.svg" alt="people board" />
+        <img src="/assets/images/makr.svg" alt="machine" class="mark-beahead" />
         <span class="step">4</span>
       </div>
       <a id="botaoJogo" class="botao-jogo">
@@ -60,20 +60,20 @@
         <span>Launch Challenge</span>
       </a>
 
-      <img id="confetti" src="assets/images/effect.png" alt="bandeira brasil" />
-      <img id="longFlag" src="assets/images/tape.png" alt="bandeira brasil somente com as cores" />
-      <img id="longFlag2" src="assets/images/tape.png" alt="bandeira brasil somente com as cores" />
-      <img id="brFlag" src="assets/images/flag.png" alt="bandeira brasil" />
+      <img id="confetti" src="/assets/images/effect.png" alt="bandeira brasil" />
+      <img id="longFlag" src="/assets/images/tape.png" alt="bandeira brasil somente com as cores" />
+      <img id="longFlag2" src="/assets/images/tape.png" alt="bandeira brasil somente com as cores" />
+      <img id="brFlag" src="/assets/images/flag.png" alt="bandeira brasil" />
     </div>
 
     <div class="made-for">
 
-      <audio src="assets/audios/bg-music-main.mp3" autoplay loop controls></audio>
+      <audio src="/assets/audios/bg-music-main.mp3" autoplay loop controls></audio>
 
       Developed <span class="easteregg">
         <p>by</p>
         <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-      </span><img src="assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+      </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
 
     </div>
   </main>
