--- a/index.html
+++ b/index.html
@@ -276,30 +276,30 @@
 
         <div class="brazil-map">
 
-            <img class="brazil" src="./assets/images/bg-main.svg" alt="Mapa brasil">
+            <img class="brazil" src="/game-quiz-start-machine/assets/bg-main-BfyPq270.svg" alt="Mapa brasil">
 
             <div class="stand modal-game" data-jogo="modal-game" data-link="#" data-concluido="false"
                 style="position: absolute; left: 400px; top: 390px">
-                <img src="./assets/images/makr.svg" alt="marcacao" class="mark-atual" />
+                <img src="data:image/svg+xml,%3csvg%20width='20'%20height='13'%20viewBox='0%200%2020%2013'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M9.71123%202.53736C11.72%202.53736%2013.6688%202.9948%2015.056%203.79736C16.244%204.47896%2016.9232%205.34967%2016.9232%206.18967C16.9232%207.02967%2016.244%207.90063%2015.0584%208.58223C12.2768%2010.19%207.14085%2010.1883%204.36405%208.58512C3.17845%207.90064%202.49925%207.02967%202.49925%206.18967C2.49925%205.34967%203.17845%204.47896%204.36405%203.79736C5.75125%202.9948%207.70003%202.53736%209.71123%202.53736ZM9.71123%2012.2451C12.164%2012.2451%2014.4896%2011.6835%2016.256%2010.6606C18.2336%209.52544%2019.3232%207.93735%2019.3232%206.18967C19.3232%204.44511%2018.2336%202.8532%2016.256%201.71608C12.7208%20-0.319356%206.69925%20-0.319356%203.16405%201.71608C1.18885%202.85608%200.0992489%204.44511%200.0992489%206.18967C0.0992489%207.93735%201.18885%209.52351%203.16405%2010.6635C4.93045%2011.6835%207.25603%2012.2451%209.71123%2012.2451Z'%20fill='white'/%3e%3c/svg%3e" alt="marcacao" class="mark-atual" />
                 <span class="step">1</span>
             </div>
 
             <div class="stand bat-atual" data-jogo="kaban" data-link="src/pages/rpg-factory.html"
                 style="position: absolute; left: 550px; bottom: 150px">
-                <img src="./assets/images/makr.svg" alt="marcacao" class="mark-atual" />
+                <img src="data:image/svg+xml,%3csvg%20width='20'%20height='13'%20viewBox='0%200%2020%2013'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M9.71123%202.53736C11.72%202.53736%2013.6688%202.9948%2015.056%203.79736C16.244%204.47896%2016.9232%205.34967%2016.9232%206.18967C16.9232%207.02967%2016.244%207.90063%2015.0584%208.58223C12.2768%2010.19%207.14085%2010.1883%204.36405%208.58512C3.17845%207.90064%202.49925%207.02967%202.49925%206.18967C2.49925%205.34967%203.17845%204.47896%204.36405%203.79736C5.75125%202.9948%207.70003%202.53736%209.71123%202.53736ZM9.71123%2012.2451C12.164%2012.2451%2014.4896%2011.6835%2016.256%2010.6606C18.2336%209.52544%2019.3232%207.93735%2019.3232%206.18967C19.3232%204.44511%2018.2336%202.8532%2016.256%201.71608C12.7208%20-0.319356%206.69925%20-0.319356%203.16405%201.71608C1.18885%202.85608%200.0992489%204.44511%200.0992489%206.18967C0.0992489%207.93735%201.18885%209.52351%203.16405%2010.6635C4.93045%2011.6835%207.25603%2012.2451%209.71123%2012.2451Z'%20fill='white'/%3e%3c/svg%3e" alt="marcacao" class="mark-atual" />
                 <span class="step">2</span>
             </div>
 
             <a class="stand ceos" href="src/pages/ceos.html" data-jogo="ceos" data-link="src/pages/ceos.html"
                 style="position: absolute; left: 620px; bottom: 250px">
-                <img src="./assets/images/logo-ceos-icon-yellow.svg" alt="logo ceos" class="mark-atual"
+                <img src="data:image/svg+xml,%3csvg%20width='296'%20height='378'%20viewBox='0%200%20296%20378'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M275.83%20175.32C253.84%20145.32%20212.19%20128.02%20164.98%20105.79C100.07%2075.2503%20100.43%2018.4303%20116.39%200.280273C120.23%2011.6203%20116.64%2033.2503%20215.45%2072.1303C286.39%20100.03%20291.77%20157.15%20275.83%20175.32Z'%20fill='%23F1BE40'/%3e%3cpath%20d='M183.62%20143.67C159.8%20133.27%2092.71%20111.1%2086.55%2045.9302C86.55%2045.9302%20-59.34%20177.83%2027.8%20309.05C53.87%20348.34%2095.28%20368.49%20141.01%20377.51C97.93%20348.67%2021.06%20253.87%2077.15%20126.02C86.19%20162.63%20118.24%20184.39%20143.96%20196.31C133.83%20201.27%20124.7%20208.68%20117.47%20218.3C92.89%20251.13%2099.59%20297.67%20132.43%20322.27C165.26%20346.85%20211.83%20340.17%20236.4%20307.36C250.04%20289.15%20254.06%20266.69%20249.26%20246.13C270.26%20264.12%20283.12%20285.35%20292.81%20309.54C293.88%20301.39%20322.63%20204.34%20183.64%20143.67H183.62ZM233.06%20239.11C223.69%20251.63%20205.87%20254.2%20193.35%20244.8C182.81%20236.92%20179.31%20223.15%20183.98%20211.52C180.5%20213.82%20177.37%20216.74%20174.74%20220.25C162.24%20236.97%20165.63%20260.63%20182.35%20273.15C195.9%20283.31%20214.05%20282.97%20227.1%20273.55C208.37%20297.3%20174.07%20301.88%20149.71%20283.66C124.98%20265.11%20119.93%20230.07%20138.46%20205.34C140.71%20202.33%20143.21%20199.6%20145.92%20197.19C163.98%20205.31%20178.46%20208.53%20178.73%20208.62C201.81%20216.32%20220.29%20225.29%20235.34%20235.52C234.69%20236.77%20233.93%20237.95%20233.06%20239.11Z'%20fill='%23F1BE40'/%3e%3c/svg%3e" alt="logo ceos" class="mark-atual"
                     style="width: 20px;" />
             </a>
 
-            <img src="./assets/images/player-right-front.svg" alt="player" id="boneco" class="boneco"
+            <img src="/game-quiz-start-machine/assets/player-right-front-BXm4CXL8.svg" alt="player" id="boneco" class="boneco"
                 style="top: 300px; left: 200px;" />
             </a>
-            <audio style="position: absolute; left: 80px; top: 8px;" src="./assets/audios/bg-music-epic1.mp3"
+            <audio style="position: absolute; left: 80px; top: 8px;" src="/game-quiz-start-machine/assets/bg-music-epic1-DKTlKMT0.mp3"
                 autoplay loop controls></audio>
     </main>
     </div>
@@ -328,19 +328,19 @@
     document.addEventListener('keydown', (e) => {
         switch (e.key) {
             case 'ArrowUp': posY -= 30;
-                boneco.setAttribute("src", "./assets/images/player-left.svg");
+                boneco.setAttribute("src", "./public/assets/images/player-left.svg");
                 audioPlay("walk")
                 break;
             case 'ArrowDown': posY += 30;
-                boneco.setAttribute("src", "./assets/images/player-right-front.svg");
+                boneco.setAttribute("src", "./public/assets/images/player-right-front.svg");
                 audioPlay("walk")
                 break;
             case 'ArrowLeft': posX -= 30;
-                boneco.setAttribute("src", "./assets/images/player-left-front.svg");
+                boneco.setAttribute("src", "./public/assets/images/player-left-front.svg");
                 audioPlay("walk")
                 break;
             case 'ArrowRight': posX += 30;
-                boneco.setAttribute("src", "./assets/images/player-right.svg");
+                boneco.setAttribute("src", "./public/assets/images/player-right.svg");
                 audioPlay("walk")
                 break;
         }
@@ -393,7 +393,7 @@
         });
     }
     function audioPlay(song) {
-        const audio = new Audio(`./assets/audios/${song}.mp3`);
+        const audio = new Audio(`./public/assets/audios/${song}.mp3`);
         audio.play();
     }
 
