fix: addres img

--- a/src/pages/categoria.html
+++ b/src/pages/categoria.html
@@ -29,7 +29,8 @@
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
 
-        <audio src="/assets/audios/bgmusic-arcade.mp3" autoplay loop controls></audio>
+        <audio src="../../assets/audios/bgmusic-arcade.mp3" autoplay loop controls></audio>
+    
 
     </main>
     <footer>
@@ -37,7 +38,7 @@
             Developed <span class="easteregg">
                 <p>by</p>
                 <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-            </span><img src="/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+            </span><img src="../../assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
 
         </div>
     </footer>
