--- a/src/pages/ceos.html
+++ b/src/pages/ceos.html
@@ -642,7 +642,7 @@
                     <h2>Vem ai o...</h2>
                 </div>
                 <div class="slide frame5">
-                    <h2><img class="logo-ceos" src="assets/images/logo-ceos-purple-hz.svg" alt="Logo Ceos" /></h2>
+                    <h2><img class="logo-ceos" src="../../assets/images/logo-ceos-purple-hz.svg" alt="Logo Ceos" /></h2>
                 </div>
             </div>
         </div>
