--- a/src/pages/kaban1.html
+++ b/src/pages/kaban1.html
@@ -24,7 +24,7 @@
             <a class="btn-secondary" href="../pages/rpg-factory.html">Close Challenge</a>
         </div>
 
-        <audio src="/game-quiz-start-machine/assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
+        <audio src="../../assets/audios/bgmusic-modern.mp3" autoplay loop controls></audio>
 
     </main>
     <footer>
@@ -32,7 +32,7 @@
             Developed <span class="easteregg">
                 <p>by</p>
                 <div class="dev"><a href="https://www.linkedin.com/in/denergarcia/">Dener Garcia</a></div>
-            </span><img src="/game-quiz-start-machine/assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+            </span><img src="../../assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
 
         </div>
     </footer>
