--- a/src/pages/maker-machine.html
+++ b/src/pages/maker-machine.html
@@ -13,7 +13,7 @@
 <body>
     <section class="main">
         <section class="header">
-            <img src="assets/images/logo-ceos-purple-hz.svg" alt="Logo Projeto CEOS" />
+            <img src="../../assets/images/logo-ceos-purple-hz.svg" alt="Logo Projeto CEOS" />
         </section>
         <div class="interaction-container">
             <button class="btn-primary play-game">Começar Jogo</button>
@@ -50,7 +50,7 @@
                         <span>---</span>
                     </div>
                 </div>
-                <img src="assets/images/gd121-maker.png" alt="Maquina encarteiradora GD - XW" />
+                <img src="../../assets/images/gd121-maker.png" alt="Maquina encarteiradora GD - XW" />
             </div>
         </div>
     </section>
@@ -63,8 +63,8 @@
         <h4>Você chegou ao final</h4>
         <a href="/src/pages/ceos.html" class="btn-primary btn-restart" >Recomeçar<a/>
     </div>
-    <audio id="machine-run" src="assets/audios/maker-run.mp3" loop></audio>
-    <audio id="machine-stop" src="assets/audios/machine-stop.mp3" loop></audio>
+    <audio id="machine-run" src="../../assets/audios/maker-run.mp3" loop></audio>
+    <audio id="machine-stop" src="../../assets/audios/machine-stop.mp3" loop></audio>
     <div class="illustration d-none">
         <div class="chat-container">
             <div class="chat"></div>
@@ -130,13 +130,13 @@
     </div>
     <div class="video-container d-none">
     <video>
-        <source src="assets/audios/demo.mp4" type="video/mp4"/>
+        <source src="../../assets/audios/demo.mp4" type="video/mp4"/>
     </video>
     </div>
     <footer>
         <div class="made-for">
             Developed <span class="easteregg"><p>by</p>
-            </span><img src="assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
+            </span><img src="../../assets/apex-logo.svg" alt="Apex team logo" /> digital cell from BAT - Brazil
             
         </div>
     </footer>
