--- a/src/pages/rpg-factory.html
+++ b/src/pages/rpg-factory.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="../js/rpg-factory.js" defer></script>
+  <script src="/src/js/rpg-factory.js" defer></script>
   <title>RPG com Mini-jogos</title>
   <link rel="stylesheet" crossorigin href="/game-quiz-start-machine/assets/rpg-CxOjbi-f.css">
 </head>
