--- a/src/pages/rpg-factory.html
+++ b/src/pages/rpg-factory.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="../js/rpg-factory.js" defer></script>
   <title>RPG com Mini-jogos</title>
+  <script type="module" crossorigin src="/game-quiz-start-machine/assets/rpg-DAFSwLB9.js"></script>
+  <link rel="modulepreload" crossorigin href="/game-quiz-start-machine/assets/modulepreload-polyfill-B5Qt9EMX.js">
   <link rel="stylesheet" crossorigin href="/game-quiz-start-machine/assets/rpg-CxOjbi-f.css">
 </head>
 
